<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.geolocation.Activity.Invite">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/gift_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/ic_gift_box" />

        <com.adevole.customresources.CustomTextView
            android:id="@+id/customTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spread_connection"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

        <com.adevole.customresources.CustomTextView
            android:id="@+id/ui_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_ui_msg"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark" />

        <RelativeLayout
            android:id="@+id/sms_share"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/share_button_background">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_sms"
                android:padding="5dp"/>
            <com.adevole.customresources.CustomButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:text="@string/invite_via_sms"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mail_share"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/share_button_background">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_mail" />
            <com.adevole.customresources.CustomButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:text="@string/invite_via_email"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fb_share"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/share_button_background"
            android:visibility="gone">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_facebook"
                android:padding="5dp"/>
            <com.adevole.customresources.CustomButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:text="@string/invite_via_facebook"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/other_share"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/share_button_background">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/other"
                android:padding="5dp"/>
            <com.adevole.customresources.CustomButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:text="@string/invite_via_other"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
